syntax = "proto3";

option csharp_namespace = "HASH.DiscountCalculator";

service Discount {
  rpc CalculateDiscount (ProductLookUpModel) returns (ProductModel);
  rpc GetAllProducts (ProductsRequest) returns (stream ProductModel);
  rpc GetAllUsers (UsersRequest) returns (stream UserModel);
}

message ProductLookUpModel {
  string userId = 1;
  string productId = 2;
  string todayDate = 3;
}

message ProductsRequest{

}

message UsersRequest{

}

message UserModel {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string date_of_birth = 4;
}

message ProductModel {
  string id = 1;
  int32 price_in_cents = 2;
  string title = 3;
  string description = 4;
  DiscountModel discount = 5;
}

message DiscountModel {
  float pct = 1;
  int32 value_in_cents = 2;
}
